--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     
     .email {
       font-size: 18px;
+      padding: 2em;
     }
     
     @media (max-width: 600px) {
@@ -44,7 +45,7 @@
     <img src="logo.png" alt="Business Logo">
 
     <div class="email">
-      Get in touch with me, suzy@beside.coach
+      Get in touch with me, <a href="mailto:suzy@beside.coach">suzy@beside.coach</a>.
     </div>
 
   </div>
