--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     body {
       background-color: #ebebeb;
       font-family: 'Montserrat', sans-serif; 
+      font-display: swap;
     }
     
     .container {
