--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
+  @font-face {
+    font-family: 'Montserrat-local';
+    src: url('/Montserrat-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+  }
+
   <style>
     body {
       background-color: #ebebeb;
