--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
   <style>
+
+    @font-face {
+      font-family: 'Montserrat';
+      src: url('/Montserrat-Medium.ttf') format('truetype');
+      font-weight: 400;
+      font-style: normal;
+    }
+    
     body {
       background-color: #ebebeb;
       font-family: 'Montserrat', sans-serif; 
