--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     @font-face {
       font-family: 'Montserrat';
-      src: url('/Montserrat-Medium.ttf') format('truetype');
+      src: local('Montserrat Medium'), local('Montserrat-Medium'), url('/Montserrat-Medium.ttf') format('truetype');
       font-weight: 400;
       font-style: normal;
     }
