--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
 
     <img src="logo.png" alt="Business Logo">
 
+    <p><strong>Coming soon.</p></strong>
+
     <div class="email">
-      Get in touch with me, <a href="mailto:suzy@beside.coach">suzy@beside.coach</a>.
+      Connect with <a href="mailto:suzy@beside.coach">suzy@beside.coach</a>.
     </div>
 
   </div>
