--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <img src="logo.png" alt="Business Logo">
 
-    <p><strong>Coming soon.</p></strong>
+    <p><strong>Coming soon.</strong></p>
 
     <div class="email">
       Connect with <a href="mailto:suzy@beside.coach">suzy@beside.coach</a>.
