--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       font-style: normal;
     }
     
-    body {
+    html, body {
       background-color: #ebebeb;
       font-family: 'Montserrat', sans-serif; 
       font-display: swap;
