--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="description" content="We break deadlocks. We celebrate successes and acknowledge progress. We keep going, building confidence and sustaining motivation.">
   <title>Beside: Leadership coach, consultant and mentor.</title>
@@ -19,6 +19,7 @@
     }
     
     html, body {
+      padding-top: env(safe-area-inset-top);
       background-color: #ebebeb;
       font-family: 'Montserrat', sans-serif; 
       font-display: swap;
