--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       font-family: 'Montserrat', sans-serif; 
       font-display: swap;
       font-size: 18px;
+      height: 100%;
     }
     
     .container {
