--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     }
     
     html, body {
-      padding-top: env(safe-area-inset-top);
-      background-color: #ebebeb;
+      background: #ebebeb;
       font-family: 'Montserrat', sans-serif; 
       font-display: swap;
       font-size: 18px;
