Adding email back

--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
 
     <p><strong>Coming soon.</strong></p>
 
+    <div class="email">
+      Connect with <a href="mailto:suzy@beside.coach">suzy@beside.coach</a>.
+    </div>
+
   </div>
 
 </body>
