--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="theme-color" content="#ebebeb">
   <meta name="description" content="We break deadlocks. We celebrate successes and acknowledge progress. We keep going, building confidence and sustaining motivation.">
   <title>Beside: Leadership coach, consultant and mentor.</title>
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
