--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Suzy Stollery</h1>
-      <p><span class="typed" data-typed-items="Coach, Consultant, Mentor, By your side"></span></p>
+      <p><span class="typed" data-typed-items="Executive Coach, Culture Consultant, HR Mentor, By your side"></span></p>
     </div>
   </section><!-- End Hero -->
 
