--- a/index.html
+++ b/index.html
@@ -511,7 +511,9 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Suzy Stollery <a href="https://www.linkedin.com/in/suzannestollery/" class="linkedin"><i
+      <h3>Suzy Stollery <a href="https://www.linkedin.com/in/suzannestollery/" class="linkedin" data-bs-toggle="popover"
+        data-bs-trigger="hover focus" data-bs-content="Find my on LinkedIn."
+        data-bs-placement="bottom" data-bs-custom-class="custom-popover"><i
             class="bx bxl-linkedin"></i></a></h3>
       <strong>Executive Coach, Culture Consultant, and HR Mentor.</strong>
 
@@ -524,9 +526,9 @@
         </div>
         <div class="col-4">
           <img src="assets/img/EIA-EMCC-logo.png" class="img-fluid"
-            alt="EIA EMCC logo. I am a global EMCC accredited coach at senior practioner level."
+            alt="EIA EMCC logo. I am a global EMCC accredited coach at senior practitioner level."
             data-bs-toggle="popover" data-bs-trigger="hover focus"
-            data-bs-content="I am a global EMCC accredited coach at senior practioner level." data-bs-placement="bottom"
+            data-bs-content="I am a global EMCC accredited coach at senior practitioner level." data-bs-placement="bottom"
             data-bs-custom-class="custom-popover" />
         </div>
         <div class="col-4">
