--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
   <footer id="footer">
     <div class="container">
       <h3>Suzy Stollery <a href="https://www.linkedin.com/in/suzannestollery/" class="linkedin" data-bs-toggle="popover"
-        data-bs-trigger="hover focus" data-bs-content="Find my on LinkedIn."
+        data-bs-trigger="hover focus" data-bs-content="Find me on LinkedIn."
         data-bs-placement="bottom" data-bs-custom-class="custom-popover"><i
             class="bx bxl-linkedin"></i></a></h3>
       <strong>Executive Coach, Culture Consultant, and HR Mentor.</strong>
