--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>Beside: Leadership coach, consultant and mentor.</title>
   <meta
-    content="I’m here as your coach, consultant, and mentor. As a former global Chief People Officer, I’ve played integral roles in building and steering global leadership teams through periods of transformational change and growth. I have a deep understanding of organisational dynamics, and the nuanced conversations within."
+    content="I'm here as your coach, consultant, and mentor. As a former global Chief People Officer, I've played integral roles in building and steering global leadership teams through periods of transformational change and growth. I have a deep understanding of organisational dynamics, and the nuanced conversations within."
     name="description">
   <meta content="Executive Coach, Culture Consultant, HR Mentor." name="keywords">
 
@@ -89,14 +89,14 @@
               alt="Profile picture of Suzy Stollery." />
           </div>
           <div class="col-lg-8 col-md-6 pt-4 pt-lg-0 content px-4">
-            <p class="leadin">Welcome. I’m here as your coach, consultant, and mentor.</p>
-            <p>As a former global Chief People Officer, I’ve played integral roles in building and steering global
-              leadership teams through periods of transformational change and growth.</p>
+            <p class="leadin">Welcome. I'm here by your side as your coach, consultant, and mentor. </p>
+            <p>As a former global Chief People Officer, I've played integral roles in building and steering global
+              leadership teams through periods of transformational change and growth. I've partnered with, and coached, many leaders including Founders and C-suite teams.</p>
             <p>I have a deep understanding of organisational dynamics, and the nuanced conversations within.</p>
             <p>My experience spans intimate founder led start-ups, to complex global matrixed organisations. I have
               experience in navigating both the challenges and the inherent opportunities, enabling me to create impact
               for the benefit of all stakeholders.</p>
-            <p>I’m at my best when coaching leaders to enhance their awareness and effectiveness. I’m equally driven by
+            <p>I'm at my best when coaching leaders to enhance their awareness and effectiveness. I'm equally driven by
               creating progressive workplaces people want to be a part of, and where they can thrive. </p>
             <p>I specialise in:
             </p>
@@ -107,7 +107,7 @@
               <li><i class="bi bi-chevron-right"></i> <strong>Mentoring HR leaders</strong> </li>
             </ul>
 
-            <p>At Beside I work with boards, CEOs, leadership teams, and HR leaders from start-ups, scale-ups, large
+            <p>At Beside I work with boards, C-suite teams, leadership teams, and HR leaders from start-ups, scale-ups, large
               organisations, and non-profits offering:</p>
             <ul>
               <li><i class="bi bi-chevron-right"></i> <strong>Tailored one-on-one coaching programmes</strong>
@@ -167,10 +167,10 @@
               <p>I walk the path beside you to help you become the most effective leader you can be. </p>
               <p>I am a safe and confidential thought partner for you to explore how you can grow as a leader. I support
                 you to navigate your path ahead with clarity and conviction. </p>
-              <p>You’re already highly skilled and experienced at what you do, however you may be feeling there’s
-                something missing in reaching your or your teams’ full potential. You’re potentially seeking to become
+              <p>You're already highly skilled and experienced at what you do, however you may be feeling there's
+                something missing in reaching your, or your teams', full potential. You're potentially seeking to become
                 unstuck or enhance your leadership presence. </p>
-              <p>You may be in a new role or thinking about changing role. Perhaps, you’re a CEO seeking to share
+              <p>You may be in a new role or thinking about changing role. Perhaps, you're a CEO seeking to share
                 vulnerability and grow confidence, or a Founder with a desire to scale your business for growth.</p>
 
               <p><em> Different leaders have different challenges. Together we work out the right coaching approach for
@@ -188,7 +188,7 @@
 
           </div>
           <div class="col-lg-6 px-4">
-            <h3 class="resume-title">Culture Consultancy and Mentoring</h3>
+            <h3 class="resume-title">Culture Consultancy and HR Mentoring</h3>
             <div class="resume-item">
               <p>With a deep understanding of the intricate relationship between strategy and culture, I offer CEOs,
                 and/or HR Leaders, invaluable insights into bridging culture gaps within their organisations.
@@ -203,7 +203,7 @@
                 evolve and close the gaps.
 
               </p>
-              <p>Whether you’re seeking specific interventions, ongoing mentoring, or sweeping cultural transformations,
+              <p>Whether you're seeking specific interventions, ongoing mentoring, or sweeping cultural transformations,
                 I fully immerse myself beside you offering a fresh perspective facilitating meaningful change and
                 sustainable impact.
               </p>
@@ -305,7 +305,7 @@
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   Working with Suzy was a game-changer for me. I appreciated her professional yet down
                   to earth style. Our coaching sessions were always purposeful and, very skilfully,
-                  she helped guide me to my own conclusions, with a clarity that I just couldn’t
+                  she helped guide me to my own conclusions, with a clarity that I just couldn't
                   create on my own.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
@@ -315,13 +315,13 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <h3>Will</h3>
-                <h4>Chief Operating Officer - Ella’s Kitchen</h4>
+                <h4>Chief Operating Officer - Ella's Kitchen</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   Suzy creates an environment that is not just safe, but easy to express how I feel. I
                   can now use emotions and feelings as information on what to do next, and I have a
                   far greater awareness, understanding, and choice of how I want to be as a leader.
-                  It’s been a brilliant experience all round.
+                  It's been a brilliant experience all round.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -350,7 +350,7 @@
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   High emotional awareness coupled with practical professional clarity creates instant
                   trust and respect. Having a particular skill at developing leadership talent, she
-                  successfully helped our directors’ grow with the pace of the business, as well as
+                  successfully helped our directors' grow with the pace of the business, as well as
                   create an impactful team spirit, in the face of relentless change.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
@@ -360,7 +360,7 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <h3>Kim</h3>
-                <h4>Commercial Director - Ella’s Kitchen</h4>
+                <h4>Commercial Director - Ella's Kitchen</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   Suzy is a highly professional and warm coach who creates an open environment to
@@ -398,7 +398,7 @@
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   Working with Suzy helped me evaluate the way I work and think about different ways
-                  to respond to problems which I’d previously struggled to solve. She also helped me
+                  to respond to problems which I'd previously struggled to solve. She also helped me
                   to identify ways I could strengthen relationships with people with different styles
                   of working to myself whilst developing different ways of thinking and operating.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
@@ -409,7 +409,7 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <h3>Camilla</h3>
-                <h4>Co-Founder - Women’s Work Lab</h4>
+                <h4>Co-Founder - Women's Work Lab</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   We feel extremely fortunate to have had Suzy's leadership coaching during a period
@@ -464,7 +464,7 @@
             </p>
             <p>Online. In person. On foot. Tailored. Constant progress.
             </p>
-            <p>Let’s chat about how I can help you, your team and organisation,
+            <p>Let's chat about how I can help you, your team and organisation,
             </p>
 
           </div>
@@ -474,8 +474,8 @@
 
           <div class="col-lg-8 offset-lg-2 mt-5 mt-lg-0">
 
-            <form action="https://submit-form.com/QbBEpVBUj" method="post" role="form" class="php-email-form">
-              <input type="hidden" name="_redirect" value="https://beside.coach/thanks.html" />
+            <form id="contact-form" role="form" class="php-email-form" action="https://submit-form.com/QbBEpVBUj">
+              <input type="hidden" name="_redirect" value="https://test.beside.coach/thankyou.html" />
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -541,7 +541,7 @@
 
       <div class="copyright">
         &copy; Copyright <strong><span>Beside Ltd</span></strong> | Registered company 14728891 | All Rights Reserved |
-        Privacy Policy
+        <a href="/privacy.html">Privacy Policy</a>
       </div>
     </div>
   </footer><!-- End Footer -->
