--- a/thankyou.html
+++ b/thankyou.html
@@ -52,14 +52,37 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Suzy Stollery</h3>
-      <p>Leadership coach, consultant, and mentor.</p>
-      <div class="social-links">
-        <a href="https://www.linkedin.com/in/suzannestollery/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+      <h3>Suzy Stollery <a href="https://www.linkedin.com/in/suzannestollery/" class="linkedin" data-bs-toggle="popover"
+        data-bs-trigger="hover focus" data-bs-content="Find me on LinkedIn."
+        data-bs-placement="bottom" data-bs-custom-class="custom-popover"><i
+            class="bx bxl-linkedin"></i></a></h3>
+      <strong>Executive Coach, Culture Consultant, and HR Mentor.</strong>
+
+      <div class="row align-items-center gx-5">
+        <div class="col-4">
+          <img src="assets/img/Ashridge-Executive-Education.png" class="img-fluid"
+            alt="Ashridge-Hult logo. I am an Ashridge qualified executive coach." data-bs-toggle="popover"
+            data-bs-trigger="hover focus" data-bs-content="I am an Ashridge accredited executive coach."
+            data-bs-placement="bottom" data-bs-custom-class="custom-popover" />
+        </div>
+        <div class="col-4">
+          <img src="assets/img/EIA-EMCC-logo.png" class="img-fluid"
+            alt="EIA EMCC logo. I am a global EMCC accredited coach at senior practitioner level."
+            data-bs-toggle="popover" data-bs-trigger="hover focus"
+            data-bs-content="I am a global EMCC accredited coach at senior practitioner level." data-bs-placement="bottom"
+            data-bs-custom-class="custom-popover" />
+        </div>
+        <div class="col-4">
+          <img src="assets/img/Mental-Health-First-Aider.png" class="img-fluid"
+            alt="Mental Health First Aider logo. I am a certified mental health first aider." data-bs-toggle="popover"
+            data-bs-trigger="hover focus" data-bs-content="I am a certified mental health first aider."
+            data-bs-placement="bottom" data-bs-custom-class="custom-popover" />
+        </div>
       </div>
+
       <div class="copyright">
-        &copy; Copyright <strong><span>Beside Ltd</span></strong> | Registered company 14728891 | All Rights
-        Reserved
+        &copy; Copyright <strong><span>Beside Ltd</span></strong> | Registered company 14728891 | All Rights Reserved |
+        <a href="/privacy.html">Privacy Policy</a>
       </div>
     </div>
   </footer><!-- End Footer -->
