Add worker and turnstile

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   * License: https://bootstrapmade.com/license/
   * Changed: Beside updated 30/1/2024
   ======================================================== -->
+  <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 </head>
 
 <body>
@@ -474,7 +475,7 @@
 
           <div class="col-lg-8 offset-lg-2 mt-5 mt-lg-0">
 
-            <form id="contact-form" role="form" class="php-email-form" action="https://submit-form.com/QbBEpVBUj">
+            <form id="contact-form" role="form" class="php-email-form" action="/api/contact">
               <input type="hidden" name="_redirect" value="https://test.beside.coach/thankyou.html" />
               <div class="row">
                 <div class="col-md-6 form-group">
@@ -495,7 +496,7 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="cf-turnstile" data-sitekey="0x4AAAAAAARvPmD6bkOcFF5l"></div>
+              <div class="cf-turnstile" data-sitekey="0x4AAAAAAARvOlGj8Vrjm1k5"></div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
 
