--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
           <div class="col-lg-8 col-md-6 pt-4 pt-lg-0 content px-4">
             <p class="leadin">Welcome. I'm here by your side as your coach, consultant, and mentor. </p>
             <p>As a former global Chief People Officer, I've played integral roles in building and steering global
-              leadership teams through periods of transformational change and growth. I've partnered with, and coached, many leaders including Founders and C-suite teams.</p>
+              leadership teams through periods of transformational change and growth. I've partnered with, and coached,
+              many leaders including Founders and C-suite teams.</p>
             <p>I have a deep understanding of organisational dynamics, and the nuanced conversations within.</p>
             <p>My experience spans intimate founder led start-ups, to complex global matrixed organisations. I have
               experience in navigating both the challenges and the inherent opportunities, enabling me to create impact
@@ -108,7 +109,8 @@
               <li><i class="bi bi-chevron-right"></i> <strong>Mentoring HR leaders</strong> </li>
             </ul>
 
-            <p>At Beside I work with boards, C-suite teams, leadership teams, and HR leaders from start-ups, scale-ups, large
+            <p>At Beside I work with boards, C-suite teams, leadership teams, and HR leaders from start-ups, scale-ups,
+              large
               organisations, and non-profits offering:</p>
             <ul>
               <li><i class="bi bi-chevron-right"></i> <strong>Tailored one-on-one coaching programmes</strong>
@@ -158,11 +160,11 @@
 
         <div class="section-title">
           <h2>How Beside can help</h2>
-          <p>Growth, action and impact. All by your side.</p>
+          <strong class="tag-line">Growth, action and impact. All by your side.</strong>
         </div>
 
         <div class="row">
-          <div class="col-lg-6 px-4">
+          <div class="col-lg-6 px-4" data-aos="fade-left" data-aos-delay="100">
             <h3 class="resume-title">Executive and Leadership Coaching</h3>
             <div class="resume-item pb-0">
               <p>I walk the path beside you to help you become the most effective leader you can be. </p>
@@ -173,8 +175,8 @@
                 unstuck or enhance your leadership presence. </p>
               <p>You may be in a new role or thinking about changing role. Perhaps, you're a CEO seeking to share
                 vulnerability and grow confidence, or a Founder with a desire to scale your business for growth.</p>
-
-              <p><em> Different leaders have different challenges. Together we work out the right coaching approach for
+              <p><em style="color: var(--accent); font-weight: 600;">Different leaders have different challenges.
+                  Together we work out the right coaching approach for
                   you. I work with:</em></p>
               <ul>
                 <li><strong>CEOs</strong> – new and established</li>
@@ -186,29 +188,33 @@
               <h3 class="tag-line">With you. Beside you.</h3>
             </div>
 
-
           </div>
-          <div class="col-lg-6 px-4">
+          <div class="col-lg-6 px-4" data-aos="fade-left" data-aos-delay="100">
             <h3 class="resume-title">Culture Consultancy and HR Mentoring</h3>
             <div class="resume-item">
-              <p>With a deep understanding of the intricate relationship between strategy and culture, I offer CEOs,
-                and/or HR Leaders, invaluable insights into bridging culture gaps within their organisations.
+              <p>Culture is evolving into an externally facing asset or potential liability. It is more than how
+                employees <strong><em>feel</em></strong> about the organisation, or how to best attract and retain
+                talent.
               </p>
-              <p>It's more than how employees perceive their workplace or, how employers attract and retain talent.
-                Culture is evolving into an externally facing asset or potential liability.
-              </p>
-              <p> Culture can either bolster, or impede, the delivery of organisational strategy. As leaders create,
+              <p>
+                Culture can either bolster, or impede, the delivery of organisational strategy. As leaders create,
                 cultivate and nurture it, culture can become a potent competitive advantage.
               </p>
-              <p> My approach involves a culture assessment with tailored strategies, and pragmatic interventions, to
-                evolve and close the gaps.
-
+              <p>
+                With a deep understanding of the relationship between strategy and culture, I offer CEOs, and/or HR
+                Leaders, invaluable insights into bridging culture gaps within their organisations.
               </p>
-              <p>Whether you're seeking specific interventions, ongoing mentoring, or sweeping cultural transformations,
-                I fully immerse myself beside you offering a fresh perspective facilitating meaningful change and
+              <p>
+                My approach involves a culture assessment with tailored strategies, and pragmatic interventions, to
+                evolve and close the gaps.
+              </p>
+              <p>
+                Whether you’re seeking specific interventions, ongoing mentoring, or sweeping cultural transformations,
+                I fully immerse myself beside you. I offer a fresh perspective facilitating meaningful change and
                 sustainable impact.
               </p>
-              <p><em> Different organisations have different cultural challenges. Together we work out the right
+              <p><em style="color: var(--accent); font-weight: 600;">Different organisations have different cultural
+                  challenges. Together we work out the right
                   consultancy approach for you. I work with:</em></p>
               <ul>
                 <li><strong>SMEs</strong> – new and established</li>
@@ -244,9 +250,14 @@
 
         <div class="row">
           <div class="col-md-10 offset-md-1 px-5">
-            <p>I relate by placing clients at the centre and creating trust built upon compassion, clarity, and mutual
-              candour. I bring experience, insight, and pragmatic support through a relational and person-centred
-              coaching and consulting approach.</p>
+            <p>I relate by placing clients at the centre and creating <strong
+                style="color: var(--link); font-weight: 600;">trust</strong>
+              built upon <strong style="color: var(--link); font-weight: 600;">compassion</strong>,
+              <strong style="color: var(--link); font-weight: 600;">clarity</strong>, and mutual
+              <strong style="color: var(--link); font-weight: 600;">candour</strong>. I bring experience, insight, and
+              pragmatic support through a relational and person-centred
+              coaching and consulting approach.
+            </p>
             <div data-aos="fade-up">
               <h5><strong class="model">Compassionate</strong> communication enables clarity</h5>
               <p>Compassion is conducive for open dialogue, enhancing communication and creating clarity.</p>
@@ -258,12 +269,14 @@
             </div>
             <div data-aos="fade-up">
               <h5><strong class="model">Candour</strong> deepens compassion</h5>
-              </p>Authenticity and honesty. Constructive feedback and observations shared openly. I enable you to identify
+              </p>Authenticity and honesty. Constructive feedback and observations shared openly. I enable you to
+              identify
               blind spots and make the necessary changes.</p>
             </div>
             <div data-aos="fade-up">
               <h5><strong class="model">Trust</strong></h5>
-              </p>As these three elements interplay, trust grows. Clients know I maintain confidentiality and act in their
+              </p>As these three elements interplay, trust grows. Clients know I maintain confidentiality and act in
+              their
               best interests – <strong>always</strong>.</p>
             </div>
           </div>
@@ -460,51 +473,18 @@
 
         <div class="row">
           <div class="col-lg-8 offset-lg-2 mt-5 mt-lg-0">
-            <p>One-on-one structured coaching programmes for leaders and their teams. Or consulting and/or mentoring –
+            <p>One-on-one structured coaching programmes for leaders and their teams.</p>
+            <p>Or consulting and/or mentoring –
               getting involved from within.
             </p>
             <p>Online. In person. On foot. Tailored. Constant progress.
             </p>
             <p>Let's chat about how I can help you, your team and organisation,
             </p>
-
+            <p id="signature">Suzy</p>
           </div>
         </div>
 
-        <div class="row mt-1">
-
-          <div class="col-lg-8 offset-lg-2 mt-5 mt-lg-0">
-
-            <form id="contact-form" role="form" class="php-email-form" action="https://api.web3forms.com/submit">
-              <input type="hidden" name="access_key" value="10a6fae6-a8bd-4dfd-b77e-86cef9650ce2">
-              <input type="hidden" name="redirect" value="https://test.beside.coach/thankyou.html" />
-              <div class="row">
-                <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                </div>
-                <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
-              </div>
-              <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-              </div>
-              <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <!-- hCaptcha Spam Protection -->
-              <div class="h-captcha" data-captcha="true"></div>              
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
-
-          </div>
-
-        </div>
 
       </div>
     </section><!-- End Contact Section -->
@@ -514,30 +494,36 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Suzy Stollery <a href="https://www.linkedin.com/in/suzannestollery/" class="linkedin" data-bs-toggle="popover"
-        data-bs-trigger="hover focus" data-bs-content="Find me on LinkedIn."
-        data-bs-placement="bottom" data-bs-custom-class="custom-popover"><i
-            class="bx bxl-linkedin"></i></a></h3>
+      <h3>
+        <a href="mailto:suzy@beside.coach" class="emailme" data-bs-toggle="popover" data-bs-trigger="hover focus"
+          data-bs-content="Email me." data-bs-placement="bottom" data-bs-custom-class="custom-popover">
+          <i class='bx bx-mail-send'></i></a>
+        Suzy Stollery
+        <a href="https://www.linkedin.com/in/suzannestollery/" class="linkedin" data-bs-toggle="popover"
+          data-bs-trigger="hover focus" data-bs-content="Find me on LinkedIn." data-bs-placement="bottom"
+          data-bs-custom-class="custom-popover">
+          <i class="bx bxl-linkedin"></i></a>
+      </h3>
       <strong>Executive Coach, Culture Consultant, and HR Mentor.</strong>
 
       <div class="row align-items-center gx-5">
         <div class="col-4">
           <img src="assets/img/Ashridge-Executive-Education.png" class="img-fluid"
-            alt="Ashridge-Hult logo. I am an Ashridge qualified executive coach." data-bs-toggle="popover"
-            data-bs-trigger="hover focus" data-bs-content="I am an Ashridge accredited executive coach."
+            alt="Ashridge-Hult logo. I'm an Accredited Executive Coach at Hult Ashridge Executive Education." data-bs-toggle="popover"
+            data-bs-trigger="hover focus" data-bs-content="I'm an Accredited Executive Coach at Hult Ashridge Executive Education"
             data-bs-placement="bottom" data-bs-custom-class="custom-popover" />
         </div>
         <div class="col-4">
           <img src="assets/img/EIA-EMCC-logo.png" class="img-fluid"
-            alt="EIA EMCC logo. I am a global EMCC accredited coach at senior practitioner level."
+            alt="EIA EMCC logo. I'm a Global EMCC Accredited Coach at Senior Practitioner Level."
             data-bs-toggle="popover" data-bs-trigger="hover focus"
-            data-bs-content="I am a global EMCC accredited coach at senior practitioner level." data-bs-placement="bottom"
-            data-bs-custom-class="custom-popover" />
+            data-bs-content="I'm a Global EMCC Accredited Coach at Senior Practitioner Level"
+            data-bs-placement="bottom" data-bs-custom-class="custom-popover" />
         </div>
         <div class="col-4">
           <img src="assets/img/Mental-Health-First-Aider.png" class="img-fluid"
-            alt="Mental Health First Aider logo. I am a certified mental health first aider." data-bs-toggle="popover"
-            data-bs-trigger="hover focus" data-bs-content="I am a certified mental health first aider."
+            alt="Mental Health First Aider logo. I'm a Certified Mental Health First Aider." data-bs-toggle="popover"
+            data-bs-trigger="hover focus" data-bs-content="I'm a Certified Mental Health First Aider"
             data-bs-placement="bottom" data-bs-custom-class="custom-popover" />
         </div>
       </div>
@@ -566,9 +552,6 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
-  <!-- Required for hCaptcha -->
-  <script src="https://web3forms.com/client/script.js" async defer></script>
 
 </body>
 
