--- a/privacy.html
+++ b/privacy.html
@@ -55,15 +55,11 @@
             <p>We care about privacy and hope the following explains everything the website does. Contact me if you have any questions.</p>
             <div data-aos="fade-up">
               <h5>Analytics</h5>
-              <p>The hosting provider stores anonymous visitor data.</p>
+              <p><a href="https://www.cloudflare.com/privacypolicy/">Cloud Flare</a> stores anonymous visitor data.</p>
             </div>
             <div data-aos="fade-up">
               <h5>Cookies</h5>
               <p>Cookies are not used for functional or tracking purposes, and we do not use third-party cookies.</p>
-            </div>
-            <div data-aos="fade-up">
-              <h5>Contact form submission</h5>
-              </p><a href="https://www.cloudflare.com/privacypolicy/">Cloud Flare</a> handles form submissions. The content of these forms is only read by me and stays stored in Netlify's dashboard. I do not have access to any other info besides the content of the form, nor can I match it with the analytics from Cabin. I also do not share the content of the form submissions. I may use the email provided in the form to reply to the author of the form submission.</p>
             </div>
           </div>
         </div>
@@ -77,10 +73,17 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Suzy Stollery <a href="https://www.linkedin.com/in/suzannestollery/" class="linkedin" data-bs-toggle="popover"
+      <h3>
+        <a href="mailto:suzy@beside.coach" class="emailme" data-bs-toggle="popover"
+        data-bs-trigger="hover focus" data-bs-content="Email me."
+        data-bs-placement="bottom" data-bs-custom-class="custom-popover">
+        <i class='bx bx-mail-send'></i></a>
+        Suzy Stollery 
+        <a href="https://www.linkedin.com/in/suzannestollery/" class="linkedin" data-bs-toggle="popover"
         data-bs-trigger="hover focus" data-bs-content="Find me on LinkedIn."
-        data-bs-placement="bottom" data-bs-custom-class="custom-popover"><i
-            class="bx bxl-linkedin"></i></a></h3>
+        data-bs-placement="bottom" data-bs-custom-class="custom-popover">
+        <i class="bx bxl-linkedin"></i></a>
+      </h3>
       <strong>Executive Coach, Culture Consultant, and HR Mentor.</strong>
 
       <div class="row align-items-center gx-5">
