--- a/index.html
+++ b/index.html
@@ -100,22 +100,22 @@
               for the benefit of all stakeholders.</p>
             <p>I'm at my best when coaching leaders to enhance their awareness and effectiveness. I'm equally driven by
               creating progressive workplaces people want to be a part of, and where they can thrive. </p>
-            <p>I specialise in:
+            <p><em style="color: var(--accent); font-weight: 600; font-size: 18px">I specialise in:</em>
             </p>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <strong>Executive and leadership coaching</strong>
+              <li><strong>Executive and leadership coaching</strong>
               </li>
-              <li><i class="bi bi-chevron-right"></i> <strong>Consultancy in culture development</strong></li>
-              <li><i class="bi bi-chevron-right"></i> <strong>Mentoring HR leaders</strong> </li>
+              <li><strong>Consultancy in culture development</strong></li>
+              <li><strong>Mentoring HR leaders</strong> </li>
             </ul>
 
             <p>At Beside I work with boards, C-suite teams, leadership teams, and HR leaders from start-ups, scale-ups,
               large
               organisations, and non-profits offering:</p>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <strong>Tailored one-on-one coaching programmes</strong>
+              <li><strong>Tailored one-on-one coaching programmes</strong>
               </li>
-              <li><i class="bi bi-chevron-right"></i> <strong>Hands-on consulting and mentoring - getting involved from
+              <li><strong>Hands-on consulting and mentoring - getting involved from
                   within</strong></li>
             </ul>
           </div>
@@ -128,24 +128,24 @@
             <div class="row experience">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>20+ years Leadership, Development, Coaching and HR
+                  <li> <strong>20+ years Leadership, Development, Coaching and HR
                       experience</strong>
                   </li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>EMCC Accredited Executive Coach, Senior
+                  <li> <strong>EMCC Accredited Executive Coach, Senior
                       Practitioner</strong></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>ICF Accredited Emotions Coaching Practitioner</strong>
+                  <li> <strong>ICF Accredited Emotions Coaching Practitioner</strong>
                   </li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Formerly Dyson, Pukka Herbs, Unilever, Lipton,
+                  <li> <strong>Formerly Dyson, Pukka Herbs, Unilever, Lipton,
                       Motorola</strong></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>MA Human Resources Management</strong>
+                  <li> <strong>MA Human Resources Management</strong>
                   </li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Fellow CIPD</strong></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Board Trustee</strong></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Mental Health First Aider (MHFA England)</strong></li>
+                  <li><strong>Fellow CIPD</strong></li>
+                  <li><strong>Board Trustee</strong></li>
+                  <li><strong>Mental Health First Aider (MHFA England)</strong></li>
                 </ul>
               </div>
             </div>
@@ -175,7 +175,7 @@
                 unstuck or enhance your leadership presence. </p>
               <p>You may be in a new role or thinking about changing role. Perhaps, you're a CEO seeking to share
                 vulnerability and grow confidence, or a Founder with a desire to scale your business for growth.</p>
-              <p><em style="color: var(--accent); font-weight: 600;">Different leaders have different challenges.
+              <p><em style="color: var(--accent); font-weight: 600; font-size: 18px">Different leaders have different challenges.
                   Together we work out the right coaching approach for
                   you. I work with:</em></p>
               <ul>
@@ -213,7 +213,7 @@
                 I fully immerse myself beside you. I offer a fresh perspective facilitating meaningful change and
                 sustainable impact.
               </p>
-              <p><em style="color: var(--accent); font-weight: 600;">Different organisations have different cultural
+              <p><em style="color: var(--accent); font-weight: 600; font-size: 18px">Different organisations have different cultural
                   challenges. Together we work out the right
                   consultancy approach for you. I work with:</em></p>
               <ul>
@@ -221,7 +221,7 @@
                 <li><strong>Start-ups</strong> and <strong>scale-ups</strong></li>
                 <li><strong>Newly acquired businesses</strong> in large organisations</li>
                 <li><strong>Regions</strong> and <strong>markets</strong> in large organisations</li>
-                <li><strong>Non-profit</strong> and <strong>charities</strong></li>
+                <li><strong>Non-profits</strong> and <strong>charities</strong></li>
               </ul>
               <h3 class="tag-line">A fresh look. From the outside in and the inside out.</h3>
             </div>
@@ -240,8 +240,21 @@
         </div>
 
         <div class="row">
+          <div class="col-md-10 offset-md-1 px-5">
+            <p>I relate by placing clients at the centre and creating <strong
+                style="color: var(--link); font-weight: 600;">trust</strong>
+              built upon <strong style="color: var(--link); font-weight: 600;">compassion</strong>,
+              <strong style="color: var(--link); font-weight: 600;">clarity</strong>, and mutual
+              <strong style="color: var(--link); font-weight: 600;">candour</strong>. I bring experience, insight, and
+              pragmatic support through a relational person-centred
+              coaching, and consulting approach.
+            </p>
+          </div>
+        </div>
+        <div class="row">
           <div class="col-lg-4 offset-lg-4 col-md-6 offset-md-3 col-sm-8 offset-sm-2 px-5 my-3" data-aos="fade-up"
             data-aos-delay="100">
+
             <img src="assets/img/beside-wheel.png" class="img-fluid"
               alt="A diagram showing the Beside approach. It is a venn diagram with Compassion, Clarity, and Candour on the outside. In the centre of the diagram is trust.">
             <p>
@@ -250,14 +263,7 @@
 
         <div class="row">
           <div class="col-md-10 offset-md-1 px-5">
-            <p>I relate by placing clients at the centre and creating <strong
-                style="color: var(--link); font-weight: 600;">trust</strong>
-              built upon <strong style="color: var(--link); font-weight: 600;">compassion</strong>,
-              <strong style="color: var(--link); font-weight: 600;">clarity</strong>, and mutual
-              <strong style="color: var(--link); font-weight: 600;">candour</strong>. I bring experience, insight, and
-              pragmatic support through a relational and person-centred
-              coaching and consulting approach.
-            </p>
+
             <div data-aos="fade-up">
               <h5><strong class="model">Compassionate</strong> communication enables clarity</h5>
               <p>Compassion is conducive for open dialogue, enhancing communication and creating clarity.</p>
@@ -468,7 +474,7 @@
 
         <div class="section-title">
           <h2>Work with Beside</h2>
-          <strong>By your side, I challenge, encourage and support – objectively.</strong>
+          <strong class="tag-line">By your side, I challenge, encourage and support – objectively.</strong>
         </div>
 
         <div class="row">
@@ -479,9 +485,10 @@
             </p>
             <p>Online. In person. On foot. Tailored. Constant progress.
             </p>
-            <p>Let's chat about how I can help you, your team and organisation,
+            <p>Let's chat about how I can help you, your team and organisation. Email me: <a
+                href="mailto:suzy@beside.coach">suzy@beside.coach</a>.
             </p>
-            <p id="signature">Suzy</p>
+            <img style="padding-top: 2em;" src="assets/img/signature.png"/>
           </div>
         </div>
 
@@ -496,11 +503,11 @@
     <div class="container">
       <h3>
         <a href="mailto:suzy@beside.coach" class="emailme" data-bs-toggle="popover" data-bs-trigger="hover focus"
-          data-bs-content="Email me." data-bs-placement="bottom" data-bs-custom-class="custom-popover">
+          data-bs-content="Email me" data-bs-placement="bottom" data-bs-custom-class="custom-popover">
           <i class='bx bx-mail-send'></i></a>
         Suzy Stollery
         <a href="https://www.linkedin.com/in/suzannestollery/" class="linkedin" data-bs-toggle="popover"
-          data-bs-trigger="hover focus" data-bs-content="Find me on LinkedIn." data-bs-placement="bottom"
+          data-bs-trigger="hover focus" data-bs-content="Find me on LinkedIn" data-bs-placement="bottom"
           data-bs-custom-class="custom-popover">
           <i class="bx bxl-linkedin"></i></a>
       </h3>
@@ -509,16 +516,17 @@
       <div class="row align-items-center gx-5">
         <div class="col-4">
           <img src="assets/img/Ashridge-Executive-Education.png" class="img-fluid"
-            alt="Ashridge-Hult logo. I'm an Accredited Executive Coach at Hult Ashridge Executive Education." data-bs-toggle="popover"
-            data-bs-trigger="hover focus" data-bs-content="I'm an Accredited Executive Coach at Hult Ashridge Executive Education"
+            alt="Ashridge-Hult logo. I'm an Accredited Executive Coach at Hult Ashridge Executive Education."
+            data-bs-toggle="popover" data-bs-trigger="hover focus"
+            data-bs-content="I'm an Accredited Executive Coach at Hult Ashridge Executive Education"
             data-bs-placement="bottom" data-bs-custom-class="custom-popover" />
         </div>
         <div class="col-4">
-          <img src="assets/img/EIA-EMCC-logo.png" class="img-fluid"
+          <img src="assets/img/EMCC accreditation logo SP.png" class="img-fluid"
             alt="EIA EMCC logo. I'm a Global EMCC Accredited Coach at Senior Practitioner Level."
             data-bs-toggle="popover" data-bs-trigger="hover focus"
-            data-bs-content="I'm a Global EMCC Accredited Coach at Senior Practitioner Level"
-            data-bs-placement="bottom" data-bs-custom-class="custom-popover" />
+            data-bs-content="I'm a Global EMCC Accredited Coach at Senior Practitioner Level" data-bs-placement="bottom"
+            data-bs-custom-class="custom-popover" />
         </div>
         <div class="col-4">
           <img src="assets/img/Mental-Health-First-Aider.png" class="img-fluid"
