--- a/privacy.html
+++ b/privacy.html
@@ -74,36 +74,36 @@
   <footer id="footer">
     <div class="container">
       <h3>
-        <a href="mailto:suzy@beside.coach" class="emailme" data-bs-toggle="popover"
-        data-bs-trigger="hover focus" data-bs-content="Email me."
-        data-bs-placement="bottom" data-bs-custom-class="custom-popover">
-        <i class='bx bx-mail-send'></i></a>
-        Suzy Stollery 
+        <a href="mailto:suzy@beside.coach" class="emailme" data-bs-toggle="popover" data-bs-trigger="hover focus"
+          data-bs-content="Email me" data-bs-placement="bottom" data-bs-custom-class="custom-popover">
+          <i class='bx bx-mail-send'></i></a>
+        Suzy Stollery
         <a href="https://www.linkedin.com/in/suzannestollery/" class="linkedin" data-bs-toggle="popover"
-        data-bs-trigger="hover focus" data-bs-content="Find me on LinkedIn."
-        data-bs-placement="bottom" data-bs-custom-class="custom-popover">
-        <i class="bx bxl-linkedin"></i></a>
+          data-bs-trigger="hover focus" data-bs-content="Find me on LinkedIn" data-bs-placement="bottom"
+          data-bs-custom-class="custom-popover">
+          <i class="bx bxl-linkedin"></i></a>
       </h3>
       <strong>Executive Coach, Culture Consultant, and HR Mentor.</strong>
 
       <div class="row align-items-center gx-5">
         <div class="col-4">
           <img src="assets/img/Ashridge-Executive-Education.png" class="img-fluid"
-            alt="Ashridge-Hult logo. I am an Ashridge qualified executive coach." data-bs-toggle="popover"
-            data-bs-trigger="hover focus" data-bs-content="I am an Ashridge accredited executive coach."
+            alt="Ashridge-Hult logo. I'm an Accredited Executive Coach at Hult Ashridge Executive Education."
+            data-bs-toggle="popover" data-bs-trigger="hover focus"
+            data-bs-content="I'm an Accredited Executive Coach at Hult Ashridge Executive Education"
             data-bs-placement="bottom" data-bs-custom-class="custom-popover" />
         </div>
         <div class="col-4">
-          <img src="assets/img/EIA-EMCC-logo.png" class="img-fluid"
-            alt="EIA EMCC logo. I am a global EMCC accredited coach at senior practitioner level."
+          <img src="assets/img/EMCC accreditation logo SP.png" class="img-fluid"
+            alt="EIA EMCC logo. I'm a Global EMCC Accredited Coach at Senior Practitioner Level."
             data-bs-toggle="popover" data-bs-trigger="hover focus"
-            data-bs-content="I am a global EMCC accredited coach at senior practitioner level." data-bs-placement="bottom"
+            data-bs-content="I'm a Global EMCC Accredited Coach at Senior Practitioner Level" data-bs-placement="bottom"
             data-bs-custom-class="custom-popover" />
         </div>
         <div class="col-4">
           <img src="assets/img/Mental-Health-First-Aider.png" class="img-fluid"
-            alt="Mental Health First Aider logo. I am a certified mental health first aider." data-bs-toggle="popover"
-            data-bs-trigger="hover focus" data-bs-content="I am a certified mental health first aider."
+            alt="Mental Health First Aider logo. I'm a Certified Mental Health First Aider." data-bs-toggle="popover"
+            data-bs-trigger="hover focus" data-bs-content="I'm a Certified Mental Health First Aider"
             data-bs-placement="bottom" data-bs-custom-class="custom-popover" />
         </div>
       </div>
