--- a/index.html
+++ b/index.html
@@ -123,19 +123,19 @@
       </div>
       <div class="container" data-aos="fade-up">
         <div class="row">
-          <div class="col-md-10 offset-md-1 px-5 content">
+          <div class="col-lg-12 col-md-6 pt-4 pt-lg-0 content px-4">
             <h3>Experience</h3>
             <div class="row experience">
               <div class="col-lg-6">
                 <ul>
-                  <li> <strong>20+ years Leadership, Development, Coaching and HR
+                  <li><strong>20+ years Leadership, Development, Coaching and HR
                       experience</strong>
                   </li>
-                  <li> <strong>EMCC Accredited Executive Coach, Senior
+                  <li><strong>EMCC Accredited Executive Coach, Senior
                       Practitioner</strong></li>
-                  <li> <strong>ICF Accredited Emotions Coaching Practitioner</strong>
+                  <li><strong>ICF Accredited Emotions Coaching Practitioner</strong>
                   </li>
-                  <li> <strong>Formerly Dyson, Pukka Herbs, Unilever, Lipton,
+                  <li><strong>Formerly Dyson, Pukka Herbs, Unilever, Lipton,
                       Motorola</strong></li>
                 </ul>
               </div>
@@ -175,7 +175,8 @@
                 unstuck or enhance your leadership presence. </p>
               <p>You may be in a new role or thinking about changing role. Perhaps, you're a CEO seeking to share
                 vulnerability and grow confidence, or a Founder with a desire to scale your business for growth.</p>
-              <p><em style="color: var(--accent); font-weight: 600; font-size: 18px">Different leaders have different challenges.
+              <p><em style="color: var(--accent); font-weight: 600; font-size: 18px">Different leaders have different
+                  challenges.
                   Together we work out the right coaching approach for
                   you. I work with:</em></p>
               <ul>
@@ -213,7 +214,8 @@
                 I fully immerse myself beside you. I offer a fresh perspective facilitating meaningful change and
                 sustainable impact.
               </p>
-              <p><em style="color: var(--accent); font-weight: 600; font-size: 18px">Different organisations have different cultural
+              <p><em style="color: var(--accent); font-weight: 600; font-size: 18px">Different organisations have
+                  different cultural
                   challenges. Together we work out the right
                   consultancy approach for you. I work with:</em></p>
               <ul>
@@ -252,7 +254,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4 offset-lg-4 col-md-6 offset-md-3 col-sm-8 offset-sm-2 px-5 my-3" data-aos="fade-up"
+          <div class="col-lg-5 offset-lg-5 col-md-6 offset-md-3 col-sm-8 offset-sm-2 px-5 my-3" data-aos="fade-up"
             data-aos-delay="100">
 
             <img src="assets/img/beside-wheel.png" class="img-fluid"
@@ -488,7 +490,7 @@
             <p>Let's chat about how I can help you, your team and organisation. Email me: <a
                 href="mailto:suzy@beside.coach">suzy@beside.coach</a>.
             </p>
-            <img style="padding-top: 2em;" src="assets/img/signature.png"/>
+            <img style="padding-top: 2em;" alt="Suzy, her name in script" src="assets/img/signature.png" />
           </div>
         </div>
 
